# imperialco2growthmodels

./: README.md  pyproject.toml
ImperialCO2growthmodel/: __init__.py  ablation.py  api.py  calibrate.py  constants.py  core.py  models.py  shortcuts.py  solvers.py
